VQA fixes part 2